--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-pdfminer3
-pyresparser
-streamlit
-pandas
-pafy
-plotly
-pymysql
-streamlit-tags
-Pillow
+streamlit==1.18.1
+pandas==1.4.4
+sklearn==0.0.post1
+scikit-learn==1.0.2
