--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,12 @@ streamlit==1.18.1
 pandas==1.4.4
 sklearn==0.0.post1
 scikit-learn==1.0.2
-nltk
+pdfminer3==2018.12.3.0
+pyresparser==1.0.6
+pandas==1.5.3
+pafy==0.5.5
+plotly==5.13.0
+PyMySQL==1.0.2
+streamlit-tags==1.2.8
+Pillow==9.4.0
+nltk==3.8.1
